--- a/Apricity.System.TimeController/Apricity.OS.TimeController.csproj
+++ b/Apricity.System.TimeController/Apricity.OS.TimeController.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{67CCD4D6-057F-4B8C-9320-F0C36C44A092}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Apricity.System</RootNamespace>
-    <AssemblyName>Apricity.System.TimeController</AssemblyName>
+    <RootNamespace>Apricity.OS</RootNamespace>
+    <AssemblyName>Apricity.OS.TimeController</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -20,7 +20,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Debug\Apricity.System.TimeController.XML</DocumentationFile>
+    <DocumentationFile>bin\Debug\Apricity.OS.TimeController.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -29,7 +29,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\Apricity.System.TimeController.XML</DocumentationFile>
+    <DocumentationFile>bin\Release\Apricity.OS.TimeController.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="DependencySharp">
